--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="card-container">
-    <div class="card" id="card1">-</div>
-    <div class="card" id="card2">-</div>
+    <div class="card" id="card1"></div>
+    <div class="card" id="card2"></div>
   </div>
   <button id="open">open</button>
   <button id="next">next</button>
