--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
   <div class="card-container">
-    <div class="card" id="card1"></div>
-    <div class="card" id="card2"></div>
+    <div class="card" id="card1">
+      <div class="card-content front">裏</div>
+      <div class="card-content back"></div>
+    </div>
+    <div class="card" id="card2">
+      <div class="card-content front">裏</div>
+      <div class="card-content back"></div>
+    </div>
   </div>
   <button id="open">open</button>
   <button id="next">next</button>
