--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <title>カードゲーム</title>
+  <title>2cards</title>
 </head>
 <body>
   <div class="card-container">
@@ -17,7 +17,7 @@
       <div class="card-face card-front"></div>
     </div>
   </div>
-  <button id="open">open</button>
+  <button id="open">play</button>
 
   <script src="script.js"></script>
 </body>
