再度テスト

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
       <div class="card-face card-front"></div>
     </div>
   </div>
-  <button id="open">play2</button>
+  <button id="open">play</button>
 
   <script src="script.js"></script>
 </body>
 </html>
-
